crates/qa-core/tests/ui/cannot_forge_credential.stderr
error[E0432]: unresolved import `identity_verification`
  --> tests/ui/cannot_forge_credential.rs:12:5
   |
12 | use identity_verification::VerifiedCredential;
   |     ^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `identity_verification`
   |
   = help: if you wanted to use a crate named `identity_verification`, use `cargo add identity_verification` to add it to your `Cargo.toml`
